v0.2.2 (WIP)
- Fix dropdown mouse capture behavior

v0.2.1 (2020-01-01)
- Add initial mouse support (some widgets are unsupported)
- Add window size change handler
- Fix resetting TextView color with [-]
- Fix adding unnecessary padding to some runes
- Fix handling ANSI color escape codes 39 (default foreground) and 49 (default
background)

v0.2.0 (2019-12-30)
- Fork tview as cview

v0.1.20 (2019-07-08)
- Added autocomplete functionality to InputField.

v0.1.19 (2018-10-28)
- Added QueueUpdate() and QueueEvent() to Application to help with
modifications to primitives from goroutines.

v0.1.18 (2018-10-18)
- InputField elements can now be navigated freely.

v0.1.17 (2018-06-20)
- Added TreeView.

v0.1.15 (2018-05-02)
- Flex and Grid don't clear their background per default, thus allowing for
custom modals. See the Wiki for an example.

v0.1.14 (2018-04-13)
- Added an Escape() function which keep strings like color or region tags from
being recognized as such.
- Added ANSIWriter() and TranslateANSI() which convert ANSI escape sequences to
tview color tags.

v0.1.13 (2018-04-01)
- Added background colors and text attributes to color tags.

v0.1.12 (2018-03-13)
- Added "suspended mode" to Application.

v0.1.11 (2018-03-02)
- Added a RemoveItem() function to Grid and Flex.

v0.1.10 (2018-02-22)
- Direct access to the screen object through callback in Box (i.e. for all
primitives).

v0.1.9 (2018-02-20)
- Introduced Grid layout.
- Direct access to the screen object through callbacks in Application.

v0.1.8 (2018-01-17)
- Color tags can now be used almost everywhere.

v0.1.7 (2018-01-16)
- Forms can now also have a horizontal layout.

v0.1.6 (2018-01-14)
- All primitives can now intercept all key events when they have focus.
- Key events can also be intercepted globally (changed to a more general, consistent handling)

v0.1.5 (2018-01-13)
- TextView now has word wrapping and text alignment

v0.1.4 (2018-01-12)