@@ -34,8 +34,8 @@ func Form(nextSlide func()) (title string, content cview.Primitive) {
 		AddInputField("First name:", "", 20, nil, nil).
 		AddInputField("Last name:", "", 20, nil, nil).
 		AddDropDown("Role:", []string{"Engineer", "Manager", "Administration"}, 0, nil).
-		AddCheckbox("On vacation:", false, nil).
 		AddPasswordField("Password:", "", 10, '*', nil).
+		AddCheckbox("", "On vacation", false, nil).
 		AddButton("Save", nextSlide).
 		AddButton("Cancel", nextSlide)
 	f.SetBorder(true).SetTitle("Employee Information")
